# AI_Agent_Workflow

./: .env.example  .gitignore  README.md  app.py  claude.md  pyproject.toml
.github/: copilot-instructions.md
ai_agent/: __init__.py  cli.py  config.py  logging_config.py  main.py  registry.py
ai_agent/agents/: __init__.py  assistant_agent.py  base_agent.py  ollama_agent.py  ollama_tool_agent.py  tool_using_agent.py
ai_agent/mcp/: __init__.py  server.py
ai_agent/resources/: __init__.py
ai_agent/resources/configs/: .gitkeep
ai_agent/resources/knowledge_base/: .gitkeep
ai_agent/resources/prompts/: system_default.txt
ai_agent/skills/: __init__.py  base_skill.py  summarize_skill.py
ai_agent/tools/: __init__.py  base_tool.py  echo_tool.py  fetch_url_tool.py  read_file_tool.py
examples/: 01_simple_assistant.py  02_tool_using_agent.py  03_mcp_server_demo.py
tests/: conftest.py  test_config.py  test_echo_tool.py  test_tool_registry.py
