[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "0.1.0"
description = "Python AI Agent 框架：支持本地 Ollama 模型与 Claude API，内置 Web GUI、工具调用、技能模块与 MCP 协议服务端。"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28",
    "openai>=1.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "gradio>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
ai-agent = "ai_agent.cli:main"
ai-agent-mcp = "ai_agent.mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
