[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "0.1.0"
description = "Python AI Agent framework with local Ollama LLM support, Claude API, Gradio Web GUI, tool calling, skills, and MCP server."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28",
    "openai>=1.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "gradio>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
ai-agent = "ai_agent.cli:main"
ai-agent-mcp = "ai_agent.mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
